# ic-burp-extension

./: .gitignore  README.md  build.sh
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: gradle.yml  release.yml  run-tests.yml
docs/: how-to-release.md  how-to-verify-release.md
java-extension/: .gitignore  build.gradle.kts  gradle.lockfile  settings.gradle.kts
java-extension/gradle/wrapper/: gradle-wrapper.properties
java-extension/src/main/java/org/dfinity/ic/burp/: DataPersister.java  ICController.java  ICProxyRequestHandler.java  IcBurpExtension.java  IcCacheRefresh.java  IcHttpRequestResponseViewer.java  IcHttpRequestResponseViewerProvider.java  IcSigning.java  Utils.java
java-extension/src/main/java/org/dfinity/ic/burp/UI/: CacheLoaderSubscriber.java  ICButton.java  TopPanel.java
java-extension/src/main/java/org/dfinity/ic/burp/controller/: ICController.java  IdlController.java  IiController.java
java-extension/src/main/java/org/dfinity/ic/burp/model/: CanisterCacheInfo.java  IiState.java  InternetIdentities.java  InternetIdentity.java  JWKIdentity.java  OkOrCancel.java  PreferenceType.java  (+1 more)
java-extension/src/main/resources/: importScript.js
java-extension/src/test/java/org/dfinity/ic/burp/: IcCacheRefreshTest.java  IcHttpRequestResponseViewerTest.java
rust-lib/: Cargo.toml
rust-lib/resources/test/: http.idl  internet_identity.idl
rust-lib/src/: lib.rs
rust-lib/src/canister_lookup/: mod.rs  model.rs
rust-lib/src/encode/: mod.rs  model.rs
rust-lib/src/internet_identity/: mod.rs  model.rs
rust-lib/src/jna/: mod.rs  model.rs
(+57 files in other folders)
