[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor = "0.4.1"
ring = "0.16.20"
rustc-serialize = "0.3.24"
hex = "0.4.3"
ic-agent = "0.28.0"
ic-transport-types = "0.28.0"
serde = "1.0.162"
serde_bytes = "0.11.9"
serde_cbor = "0.11.2"
serde_json = "1.0.96"
serde_repr = "0.1.16"
candid = { version = "0.9.6", features = ["parser"] }
ic-certification = "0.27.0"
thiserror = "1.0.49"
base64 = "0.21.4"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"

[lib]
crate_type = ["lib", "cdylib"]
