[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# upgrading to 0.17.7 breaks BasicIdentity::from_pem() compatibility for Ed25519KeyPair::generate_pkcs8
ring = "0.16.20"
hex = "0.4.3"
ic-agent = "0.31.0"
ic-transport-types = "0.31.0"
serde = "1.0.162"
serde_bytes = "0.11.9"
serde_cbor = "0.11.2"
serde_json = "1.0.96"
serde_repr = "0.1.16"
candid = { version = "0.10.2", features = ["value"] }
candid_parser = { version = "0.1.2" }
ic-certification = "0.27.0"
thiserror = "1.0.49"
base64 = "0.21.5"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
time = "0.3.31"

[lib]
crate_type = ["lib", "cdylib"]
